Bug 208252 - Splitter and column sizes not remembered
Summary: Splitter and column sizes not remembered
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-23 10:07 UTC by Thomas McGuire
Modified: 2009-09-25 00:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2009-09-23 10:07:54 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

KAddressbook doesn't remember the splitter position of the main splitters, and also not the column sizes when showing more than one column in the middle pane.

libkdepim/uistatesaver might help with the splitter sizes.
Comment 1 Tobias Koenig 2009-09-23 12:02:10 UTC
SVN commit 1027084 by tokoe:

Remember splitter sizes and column positions over restart

BUG: 208252


 M  +27 -5     mainwidget.cpp  
 M  +2 -0      mainwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1027084
Comment 2 Sabine Faure 2009-09-25 00:56:02 UTC
It is corrected now.

The column sizes are always remembered after being set manually with splitters, even when displaying several columns in the central one.

Trunk, Svn Rev 1027765