Remember splitter sizes and column positions over restart

BUG: 208252

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1027084